Tests/Good/For/for1.tig
for i:=1 to 4-1 do 4*(4-i)
