Tests/Bad/For/for2.tig
for i=5 to 7 do(a=a+1)